discord_themes/addons/alky_CV_addons.css
/* ... */
aside.profilePanel-2PWEok .userPanelOuter-xc-WYi .badgelistGroup-2XjSQi,
aside.profilePanel-2PWEok .userPanelOverlayBackground-3xwDMp.overlayBackground-1KgwVi{
    top: calc(0.9*var(--profile-popout-picture-size, 80px) - 75px);
    /*adjust position of info and badge panels to not overlap with avatar*/
}
aside.profilePanel-2PWEok{
    padding-top: 10px;
    padding-right: 10px;
    /*gives white space on top and right edges of profile panel*/
}
aside.profilePanel-2PWEok .userPanelOuter-xc-WYi .bannerSVGWrapper-qc0szY .banner-2boKnS{
    border-radius: 8px 8px 0 0;
    /*rounds top corners of profile panel*/
}
aside.profilePanel-2PWEok .avatarPositionPanel-3P4Ted{
    left: max(calc(50% - 0.55*var(--profile-popout-picture-size, 80px)), 10px);
    /*keeps avatar in center of profile panel*/
}
/*-----CREDIT CARD INFO-----*/
.input-2g-os5[placeholder="Coolsville"]::placeholder,
.input-2g-os5[placeholder="123 Discord Drive"]+div .text-xs-normal-3SiVjE,
.input-2g-os5[placeholder="MM/YY"]+div .text-xs-normal-3SiVjE{
    text-indent: -99999px;
}
.input-2g-os5[placeholder="123 Discord Drive"]+div .text-xs-normal-3SiVjE:after,
.input-2g-os5[placeholder="MM/YY"]+div .text-xs-normal-3SiVjE:after{
    text-indent: 0;
    display: block;
}
.input-2g-os5[placeholder="123 Discord Drive"]+div .text-xs-normal-3SiVjE:after{
    content: "Address is required";
}
.input-2g-os5[placeholder="MM/YY"]+div .text-xs-normal-3SiVjE:after{
    content: "Expiration date invalid";
}
/*edited Discord marketing shit to be less stupid*/
.colorPremiumTier2-3R4qYN{
    background-color: rgb(0,0,0,0.4);
    background-image: none;
    border: 3px solid var(--main-color);
    border-radius: 7.5px;
    width: 95%;
    margin: auto;
}
.upsellContainer-22N_CL{
    background: rgb(0,0,0,0.6);
    border: 2px solid var(--main-color);
    border-radius: 12px;
    /*affects stickers tab in server settings. not sure what else*/
}

/*random tutorial arrows*/
.tutorial-1iwync .arrowGroup-25Wc10 .arrowContainer-27wMq6 img.arrowIcon-3Q91hj {
    display: none;
    /*removes tutorial arrow thingies when searching for server, channels or dm*/
}

.wumpusWrapper-3jyMw-{
    display: none;
    /*die wumpus*/
}
/*stupid discord art removal*/
.art-3-BV8m,
/*Screen Share modal*/
.art-1TvEXv,
/*stupid xbox marketing crap*/
.art-1HoEkU,
/*NEW! Text chat in voice! art thingy*/
.fullWidthImage-pvnyWO{
    display: none;
}
.artContainer-1yaXct.artContainerBoxShadow-2PjEg_{
    min-height: 40px;
    /*adjustment for removing discord art crap*/
}

.iconBadge-1D5-9X.baseShapeRound-3epLEv[style*="background-color: hsl(270, calc(var(--saturation-factor, 1) * 86.7%), 70.6%)"]{
    background-color: rgb(var(--main-color-numerical),0.25) !important;
    /*sets purple icon badge when too many servers to be correct color*/
}
.ownerIcon-255uKo.icon-1dGlZy{
    top: -2.5px;
    /*owner icon in member list*/
}

.artwork-3uFrhF{
    display: none;
}

/*improved bg of thing in screen share modal*/
.gradientBackground-MytxDL{
    background-image: none;
    background-color: rgb(var(--main-color-numerical),0.7);
} 
/*voice connection popout*/
.button-1EGGcP.buttonColor-3bP3fX.buttonActive-Uc1jHx{
    background: #000;
}
.button-1EGGcP.buttonColor-3bP3fX.buttonActive-Uc1jHx:hover{
    background-color: rgba(0,0,0,.95);
}

/*thread dropdown body stars*/
.stars-3UP9-A{
    display: none;
}

/*flower things*/
.gameVerifiedIcon-1YMUdQ svg{
    background: var(--main-color);
    border-radius: 50%;
    /*verified game icon*/
}
.flowerStarContainer-1QeD-L{
    border-radius: 50%;
    background-color: var(--main-color);
}
.flowerStar-2tNFCR[aria-label="verified" i]{
    stroke: none;
}

/*failed friend req modal*/
.focusLock-2tveLW[aria-label="Friend request failed"] .text-md-normal-304U3g{
    color: transparent;
}
.focusLock-2tveLW[aria-label="Friend request failed"] .text-md-normal-304U3g:before{
    content: "User not found. If spelling, capitalization, and discriminator is correct, it is probable that the user has blocked you or has prevented certain friend requests in settings.";
    color: var(--text-normal);
}

.shelfTopBackground-R55ED9[alt="characters playing a game"]{
    display: none;
}
.activityItem-1Z9CTr:hover .activitySubtitleText-r0WHTk{
    filter: invert(1);
}
.bar-2qGj24{
    background: transparent;
}
.bar-2qGj24 > svg{
    width: 0;
}

/*buying nitro plan modal*/
.tier2HeaderBackground-2XINxm{
    background-image: none;
    min-height: 0;
    height: 20px;
}
.tier2HeaderBackground-2XINxm .panningAnimationInner-1Bmv00,
.tier2HeaderBackground-2XINxm .sequencedAnimation-f_FX_M svg,

.guildWrapper-DAbXP2.confirmationAnimation-2CEvGX,
/*some wumpus thing*/
.wumpusImageContainer-ZGD_8q,
/*random confetti stuff*/
.cannonWrapper-2iHppQ,
/*sparkle shit*/
.sparkleStar-J6zUP3,
.sparkle-20-Tko,
/*some image thing*/
.footerImage-2WsqiE
{
    display: none;
}
.confirmImage-e5jLwI{
    background-image: none !important;
    height: 20px;
}
.confirmationUpgradedBanner-1qqQLz rect{
    stroke: var(--main-color);
}
.upsellOverlayContainer-3NMgTS{
    border-color: var(--main-color);
}

/*bot/original poster icon next to username in chat box*/
.rem-3kT9wc.botTag-7aX5WZ.botTagOP-3pUTXu{
    top: calc(0.5*(var(--chat-box-username-height, 1.375) - 1rem));  
}

/*don't mind this*/
.wideHeroBanner-1m_HSk{
    display: none;
}

